@@ -1769,11 +1769,23 @@ TcpInputProc(instanceData, buf, toRead, errorCodePtr)
 	    break;
 	}
   
+ 	error = winSock.WSAGetLastError();
+ 
+ 	/*
+ 	 * If an RST comes, then ignore the error and report an EOF just like
+ 	 * on unix.
+ 	 */
+ 
+ 	if (error == WSAECONNRESET) {
+ 	    infoPtr->flags |= SOCKET_EOF;
+ 	    bytesRead = 0;
+ 	    break;
+ 	}
+ 
 	/*
 	 * Check for error condition or underflow in non-blocking case.
 	 */
   
-	error = winSock.WSAGetLastError();
 	if ((infoPtr->flags & SOCKET_ASYNC) || (error != WSAEWOULDBLOCK)) {
 	    TclWinConvertWSAError(error);
 	    *errorCodePtr = Tcl_GetErrno();
